--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,26 @@
 <footer>
-
+    <nav class="footer-links">
+        <div>
+            <ul>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Student Services</a></li>
+                <li><a href="#">Initiates</a></li>
+                <li><a href="#">Corporate</a></li>
+            </ul>
+            <div>
+                <h1>Contact Us!</h1>
+                <a href=""><span>Email</span></a>
+            </div>
+        </div>
+    </nav>
+    <nav class="footer-copyright">
+        <div>
+            <div class="footer-copyright-left">© 2016 by Eta Kappa Nu Alpha Chapter. All Rights Reserved.</div>
+            <div class="footer-copyright-right">
+                <a href="https://www.facebook.com/hknillinois"><span class="fa fa-facebook-official"></span></a>
+                <a href="http://www.linkedin.com/groups?gid=2332996"><span class="fa fa-linkedin-square"></span></a>
+                <a href="https://github.com/hkn-uiuc"><span class="fa fa-github-square"></span></a>
+            </div>
+        </div>
+    </nav>
 </footer>
