--- a/_includes/js.html
+++ b/_includes/js.html
@@ -1,2 +1,4 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-<script src="/js/script.js"></script>
+<script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.5.9/slick.min.js"></script>
+<script src="/assets/js/navBar.js"></script>
+<script src="/assets/js/carousel.js"></script>
