--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,14 +1,12 @@
 ---
 layout: default
 ---
-<div class="post">
+<!--{% include sidebar.html %}-->
 
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-  </header>
+{% include hero-image.html %}
 
-  <article class="post-content">
-    {{ content }}
-  </article>
-
-</div>
+<section class="page-content">
+  <div class="page-container">
+    {{content}}
+  </div>
+</section>
