--- a/_sass/neat/grid/_outer-container.scss
+++ b/_sass/neat/grid/_outer-container.scss
@@ -29,7 +29,7 @@
 ///   }
 
 @mixin outer-container($local-max-width: $max-width) {
-  @include clearfix;
+  //@include clearfix;
   max-width: $local-max-width;
   margin: {
     left: auto;
