--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,10 +2,10 @@
     <nav class="footer-links">
         <div>
             <ul>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Student Services</a></li>
-                <li><a href="#">Initiates</a></li>
-                <li><a href="#">Corporate</a></li>
+                <li><a href="/about">About</a></li>
+                <li><a href="/service">Student Services</a></li>
+                <li><a href="/initiates">Initiates</a></li>
+                <li><a href="/corporate">Corporate</a></li>
             </ul>
             <div>
                 <h1>Contact Us!</h1>
@@ -24,3 +24,4 @@
         </div>
     </nav>
 </footer>
+
