--- a/_sass/_hero-image.scss
+++ b/_sass/_hero-image.scss
@@ -1,3 +1,3 @@
 #hero-image-main {
-  @include image-base('http://www.ece.illinois.edu/newsroom/images/ece-building-exterior.jpg');
+  @include image-base('/assets/img/ece-building-exterior.jpg');
 }
