--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -80,5 +80,6 @@ $border-base: 1px solid rgba(#000000, 0.5);
         "sidebar",
         "main_page",
         "page",
-        "hero-image"
+        "hero-image",
+        "officers"
 ;
